--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.14.0.3a)
+  name: Frigate Notifications (0.14.0.3b)
   author: SgtBatten
   homeassistant:
     min_version: 2024.11.0
@@ -946,6 +946,11 @@ triggers:
     event_type: mobile_app_notification_action
     event_data:
       action: "silence-{{ this.entity_id }}"
+    id: silence
+  - trigger: event
+    event_type: telegram_callback
+    event_data:
+      data: "silence-{{ this.entity_id }}"
     id: silence
   - trigger: event
     event_type: mobile_app_notification_action
