--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.14.0.3a)
+  name: Frigate Notifications (0.14.0.3c)
   author: SgtBatten
   homeassistant:
     min_version: 2024.11.0
@@ -701,6 +701,8 @@ blueprint:
           selector:
             select:
               options:
+                - label: Silence New Notifications
+                  value: silence-{{ this.entity_id }}
                 - label: View Clip
                   value: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera}}/clip.mp4"
                 - label: View Clip (IOS)
@@ -745,6 +747,8 @@ blueprint:
           selector:
             select:
               options:
+                - label: Silence New Notifications
+                  value: silence-{{ this.entity_id }}
                 - label: View Clip
                   value: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera}}/clip.mp4"
                 - label: View Clip (IOS)
